--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </ul>
      </header>
      <div class="setting-box">
-        <img src="1.jpg" alt="">
-        <img src="2.jpg" alt="">
-        <img src="3.jpg" alt="">
-        <img src="4.jpg" alt="">
-        <img src="5.jpg" alt="">
-        <img src="6.jpg" alt="">
+        <img src="https://images.unsplash.com/photo-1762764919450-560fd6515192?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDE2fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
+        <img src="https://images.unsplash.com/photo-1763598944959-62692173594c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDI0fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
+        <img src="https://images.unsplash.com/photo-1763620077650-404ff4e7a685?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM1fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
+        <img src="https://images.unsplash.com/photo-1760137658025-2d475f9ac9e4?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM5fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
+        <img src="https://plus.unsplash.com/premium_photo-1763576565907-0665844191c0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDQxfHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
+        <img src="https://images.unsplash.com/photo-1763420309077-ef9b8724b291?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDY1fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
 
 
      </div>
@@ -48,7 +48,7 @@
      <main>
         <!-- Image Landing Start -->
       <section id="landing">
-        <img src="1.jpg" alt="hee hee" class="landing-image">
+        <img src="https://images.unsplash.com/photo-1762764919450-560fd6515192?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDE2fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="hee hee" class="landing-image">
         <div class="hover-box"></div>
 
         <div class="search">
