--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
      </header>
      <div class="setting-box">
-        <img src="https://photos.fife.usercontent.google.com/pw/AP1GczOC0JxXhMCHew97w5rdOPt2rGFAMhVwzirBsgSLNncUM42BwgJCerjW=w685-h913-s-no-gm?authuser=0" alt="">
+        <img src="https://drive.google.com/drive/u/0/my-drive" alt="">
         <img src="https://images.unsplash.com/photo-1763598944959-62692173594c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDI0fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
         <img src="https://images.unsplash.com/photo-1763620077650-404ff4e7a685?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM1fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
         <img src="https://images.unsplash.com/photo-1760137658025-2d475f9ac9e4?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM5fHRvd0paRnNrcEdnfHxlbnwwfHx8fHw%3D" alt="">
@@ -48,7 +48,7 @@
      <main>
         <!-- Image Landing Start -->
       <section id="landing">
-        <img src="https://photos.fife.usercontent.google.com/pw/AP1GczOC0JxXhMCHew97w5rdOPt2rGFAMhVwzirBsgSLNncUM42BwgJCerjW=w685-h913-s-no-gm?authuser=0" alt="hee hee" class="landing-image">
+        <img src="https://drive.google.com/drive/u/0/my-drive" alt="hee hee" class="landing-image">
         <div class="hover-box"></div>
 
         <div class="search">
